...
            })}
          </ScrollView>
        )}

        <View style={{ paddingVertical: 16 }}>
          <PrimaryButton
            testID="signout-button"
            label="Sign out"
            variant="secondary"
            onPress={() => supabase.auth.signOut()}
          />
        </View>
      </View>
...
